# pinandpi

./: .gitattributes  .gitignore  README.md  all-requirements.txt  flake8ignores.txt  main.pyw  pyproject.toml  更新计划.rst
pinandpi/: __init__.py  requirements.txt
pinandpi/builddoc/source/: conf.py  index.rst
pinandpi/builddoc/source/module/: mod-cfg.rst  mod-img.rst
pinandpi/builddoc/source/spec/: about.rst
pinandpi/builddoc/source/usage/: int.md
pinandpi/doc/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pinandpi/doc/_sources/: index.rst.txt
pinandpi/doc/_sources/module/: index.rst.txt  mod-src.rst.txt
pinandpi/doc/_sources/spec/: update.rst.txt
pinandpi/doc/_sources/usage/: index.md.txt  int.md.txt
pinandpi/doc/_static/: documentation_options.js
pinandpi/doc/module/: index.html  mod-cfg.html  mod-img.html  mod-src.html
pinandpi/doc/spec/: about.html  update.html
pinandpi/doc/usage/: index.html  int.html
pinandpi/imagine/: __init__.py  algorithm12.py  algorithm22.py
pinandpi/src/: __init__.py  config.ini  config.pyw  desc.md  history.txt  int.md  readhistory.py  run.py
pinandpi/src/static/html/: .buildinfo  desc.html  genindex.html  int.html  objects.inv  search.html  searchindex.js
pinandpi/src/static/html/_sources/: int.md.txt
pinandpi/src/static/html/_static/: basic.css  documentation_options.js
pinandpi/src/static/htmlbuild/source/: conf.py  desc.md
